// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable.TableBatchActions should render 1`] = `
<TableBatchActions
  className="custom-class"
  onCancel={[MockFunction]}
  shouldShowBatchActions={false}
  totalSelected={10}
  translateWithId={[Function]}
>
  <div
    aria-hidden={true}
    className="cds--batch-actions custom-class"
    onScroll={[Function]}
  >
    <div
      className="cds--batch-summary"
    >
      <p
        className="cds--batch-summary__para"
      >
        <Text
          as="span"
        >
          <span
            dir="auto"
          >
            10 items selected
          </span>
        </Text>
      </p>
    </div>
    <TableActionList>
      <div
        className="cds--action-list"
      >
        <Button
          className="cds--batch-summary__cancel"
          onClick={[MockFunction]}
          tabIndex={-1}
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="cds--batch-summary__cancel cds--btn cds--btn--lg cds--btn--primary"
            disabled={false}
            onClick={[MockFunction]}
            tabIndex={-1}
            type="button"
          >
            Cancel
          </button>
        </Button>
      </div>
    </TableActionList>
  </div>
</TableBatchActions>
`;

exports[`DataTable.TableBatchActions should render 2`] = `
<TableBatchActions
  className="custom-class"
  onCancel={[MockFunction]}
  shouldShowBatchActions={true}
  totalSelected={10}
  translateWithId={[Function]}
>
  <div
    aria-hidden={false}
    className="cds--batch-actions cds--batch-actions--active custom-class"
    onScroll={[Function]}
  >
    <div
      className="cds--batch-summary"
    >
      <p
        className="cds--batch-summary__para"
      >
        <Text
          as="span"
        >
          <span
            dir="auto"
          >
            10 items selected
          </span>
        </Text>
      </p>
    </div>
    <TableActionList>
      <div
        className="cds--action-list"
      >
        <Button
          className="cds--batch-summary__cancel"
          onClick={[MockFunction]}
          tabIndex={0}
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="cds--batch-summary__cancel cds--btn cds--btn--lg cds--btn--primary"
            disabled={false}
            onClick={[MockFunction]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
        </Button>
      </div>
    </TableActionList>
  </div>
</TableBatchActions>
`;
